[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://HpManager.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0312

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HpManager" parent="." instance=ExtResource( 3 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="HitBox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="die" from="HpManager" to="." method="_on_HpManager_die"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
